[gd_scene load_steps=19 format=3 uid="uid://d2cugesap60c2"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Void.gd" id="1_31r28"]
[ext_resource type="AudioStream" uid="uid://gap6g2yu8kx3" path="res://Sounds/25. Universal Collapse.mp3" id="2_igdc5"]
[ext_resource type="Script" path="res://Scripts/Players/Player_1_ChallengeMode.gd" id="3_elng6"]
[ext_resource type="Texture2D" uid="uid://cnkg5na4bsn4h" path="res://Sprites/Clam.png" id="4_g6ue8"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Nukespawner.gd" id="5_xxrtc"]
[ext_resource type="PackedScene" uid="uid://cjyo8w1fk21e7" path="res://Scenes/nuke_scene.tscn" id="6_pfql5"]
[ext_resource type="PackedScene" uid="uid://bghs6em6eqof8" path="res://Scenes/Sweeper.tscn" id="7_ex2r2"]
[ext_resource type="Script" path="res://Scripts/Blackout/Blackout Timer.gd" id="8_lasx4"]
[ext_resource type="PackedScene" uid="uid://dswsedgoqefr7" path="res://Scenes/blackout.tscn" id="9_02rq7"]
[ext_resource type="PackedScene" uid="uid://dcv5hh4o4rswm" path="res://Scenes/Fog.tscn" id="10_7iaw2"]
[ext_resource type="Script" path="res://Scripts/Gameplay/MapGrounds/AddGround2.gd" id="11_hlyma"]
[ext_resource type="PackedScene" uid="uid://d342vv4g7762h" path="res://Scenes/GroundLeft.tscn" id="12_8do2l"]
[ext_resource type="PackedScene" uid="uid://crvy5gfiqpum2" path="res://Scenes/Ground.tscn" id="13_r1vtw"]
[ext_resource type="PackedScene" uid="uid://dsh7a5xw0h0uo" path="res://Scenes/GroundRight.tscn" id="14_wsj65"]
[ext_resource type="Script" path="res://Scripts/UI/ChallengeTimers.gd" id="15_lqns3"]
[ext_resource type="Theme" uid="uid://2os1x4i4c3g5" path="res://Themes/Rainworld_SquareButtonTheme.tres" id="16_ucc7a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v81yx"]
size = Vector2(6629, 193)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1nq8"]

[node name="Arena_01" type="Node2D"]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -324)

[node name="void" type="Area2D" parent="."]
script = ExtResource("1_31r28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
position = Vector2(-5, 102)
shape = SubResource("RectangleShape2D_v81yx")

[node name="UniCollapse" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("2_igdc5")

[node name="ColorRect" type="ColorRect" parent="void"]
visible = false
z_index = 1
offset_left = -584.0
offset_top = -651.0
offset_right = 575.0
offset_bottom = 21.0
color = Color(0.713726, 0, 0.74902, 0.156863)

[node name="RichTextLabel" type="RichTextLabel" parent="void"]
visible = false
z_index = 3
offset_left = -560.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
theme_override_font_sizes/normal_font_size = 18
text = "You are no god... but I shall feast upon your essence regardless!"

[node name="TextTimer" type="Timer" parent="void"]
wait_time = 3.0
one_shot = true

[node name="Players" type="Node" parent="."]

[node name="Player 1" type="CharacterBody2D" parent="Players"]
position = Vector2(-50, -170)
scale = Vector2(0.8, 0.8)
script = ExtResource("3_elng6")
metadata/Player = "Player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 1"]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_q1nq8")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Players/Player 1"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 1"]
visible = false
position = Vector2(-1.25, -0.625001)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("4_g6ue8")

[node name="Nuke Stuff" type="Node" parent="."]

[node name="Nuke Spawner" type="Node2D" parent="Nuke Stuff"]
script = ExtResource("5_xxrtc")
nuke_scene = ExtResource("6_pfql5")
sweeper_scene = ExtResource("7_ex2r2")

[node name="Timer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 15.0
autostart = true

[node name="Timer3" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 30.0
autostart = true

[node name="Timer4" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 45.0
autostart = true

[node name="Swimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 18.33
one_shot = true

[node name="SwimerTimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
one_shot = true
autostart = true

[node name="Modifier Stuff" type="Node" parent="."]

[node name="Blackout Timer" type="Node2D" parent="Modifier Stuff"]
script = ExtResource("8_lasx4")
blackout = ExtResource("9_02rq7")
fog = ExtResource("10_7iaw2")

[node name="Timer" type="Timer" parent="Modifier Stuff/Blackout Timer"]
wait_time = 10.0
autostart = true

[node name="Grounds" type="Node" parent="."]
script = ExtResource("11_hlyma")
GroundLeft = ExtResource("12_8do2l")
Ground = ExtResource("13_r1vtw")
GroundRight = ExtResource("14_wsj65")

[node name="Timers2" type="Node" parent="."]
script = ExtResource("15_lqns3")

[node name="CounterTimer" type="Timer" parent="Timers2"]
autostart = true

[node name="Time2Survive" type="Timer" parent="Timers2"]
wait_time = 60.0
one_shot = true
autostart = true

[node name="RichTextLabel" type="Label" parent="Timers2"]
offset_left = -115.0
offset_top = -618.0
offset_right = 117.0
offset_bottom = -546.0
theme = ExtResource("16_ucc7a")
text = "Time Left: 60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BG" type="Node2D" parent="."]

[connection signal="body_entered" from="void" to="void" method="_on_body_entered"]
[connection signal="timeout" from="void/TextTimer" to="void" method="_on_text_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer" to="Nuke Stuff/Nuke Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer2" to="Nuke Stuff/Nuke Spawner" method="_on_timer_2_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer3" to="Nuke Stuff/Nuke Spawner" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer4" to="Nuke Stuff/Nuke Spawner" method="_on_timer_4_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Swimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/SwimerTimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timer_timeout"]
[connection signal="timeout" from="Modifier Stuff/Blackout Timer/Timer" to="Modifier Stuff/Blackout Timer" method="_on_timer_timeout"]
[connection signal="timeout" from="Timers2/CounterTimer" to="Timers2" method="_on_counter_timer_timeout"]
[connection signal="timeout" from="Timers2/Time2Survive" to="Timers2" method="_on_time_2_survive_timeout"]
