[gd_scene load_steps=22 format=3 uid="uid://cue8cnh8tuvi7"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Void.gd" id="1_fg08r"]
[ext_resource type="AudioStream" uid="uid://3wuiotvo6106" path="res://Music/20 - Threat - Superstructure.mp3" id="2_ej3or"]
[ext_resource type="AudioStream" uid="uid://gap6g2yu8kx3" path="res://Sounds/25. Universal Collapse.mp3" id="3_k32wn"]
[ext_resource type="Script" path="res://Scripts/Players/Player_1_ChallengeMode.gd" id="3_oqkfy"]
[ext_resource type="Texture2D" uid="uid://cnkg5na4bsn4h" path="res://Sprites/Clam.png" id="5_mol7r"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Nukespawner.gd" id="7_126io"]
[ext_resource type="PackedScene" uid="uid://cjyo8w1fk21e7" path="res://Scenes/In Game Stuff/nuke_scene.tscn" id="8_4pxx2"]
[ext_resource type="PackedScene" uid="uid://bghs6em6eqof8" path="res://Scenes/In Game Stuff/Sweeper.tscn" id="9_8l2bm"]
[ext_resource type="Script" path="res://Scripts/Blackout/Blackout Timer.gd" id="10_pd8gv"]
[ext_resource type="PackedScene" uid="uid://dswsedgoqefr7" path="res://Scenes/In Game Stuff/blackout.tscn" id="11_ri46e"]
[ext_resource type="PackedScene" uid="uid://dcv5hh4o4rswm" path="res://Scenes/In Game Stuff/Fog.tscn" id="12_t36db"]
[ext_resource type="Theme" uid="uid://2os1x4i4c3g5" path="res://Themes/Rainworld_SquareButtonTheme.tres" id="13_jn3q6"]
[ext_resource type="Script" path="res://Scripts/UI/ChallengeTimers.gd" id="15_cr7po"]
[ext_resource type="Script" path="res://Scripts/Gameplay/MapGrounds/AddGround7.gd" id="18_6kwht"]
[ext_resource type="PackedScene" uid="uid://d342vv4g7762h" path="res://Scenes/In Game Stuff/GroundLeft.tscn" id="19_vl0f4"]
[ext_resource type="PackedScene" uid="uid://crvy5gfiqpum2" path="res://Scenes/In Game Stuff/Ground.tscn" id="20_ueihu"]
[ext_resource type="PackedScene" uid="uid://dsh7a5xw0h0uo" path="res://Scenes/In Game Stuff/GroundRight.tscn" id="21_2kree"]
[ext_resource type="Script" path="res://Scripts/Gameplay/GravSwitch.gd" id="26_spvpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kq0am"]
size = Vector2(12446, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1nq8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xm4t3"]
size = Vector2(40, 40)

[node name="Arena_01" type="Node2D"]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -324)

[node name="void" type="Area2D" parent="."]
position = Vector2(0, 434)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fg08r")

[node name="FP" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("2_ej3or")

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
position = Vector2(-6, 234)
shape = SubResource("RectangleShape2D_kq0am")

[node name="UniCollapse" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("3_k32wn")

[node name="ColorRect" type="ColorRect" parent="void"]
visible = false
z_index = 1
offset_left = -584.0
offset_top = -651.0
offset_right = 575.0
offset_bottom = 21.0
color = Color(0.713726, 0, 0.74902, 0.156863)

[node name="RichTextLabel" type="RichTextLabel" parent="void"]
visible = false
z_index = 3
offset_left = -560.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
theme_override_font_sizes/normal_font_size = 18
text = "You are no god... but I shall feast upon your essence regardless!"

[node name="TextTimer" type="Timer" parent="void"]
wait_time = 3.0
one_shot = true

[node name="void2" type="Area2D" parent="void"]
position = Vector2(0, -2058)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fg08r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="void/void2"]
position = Vector2(-6, 234)
shape = SubResource("RectangleShape2D_kq0am")

[node name="UniCollapse" type="AudioStreamPlayer2D" parent="void/void2"]
stream = ExtResource("3_k32wn")

[node name="ColorRect" type="ColorRect" parent="void/void2"]
visible = false
z_index = 1
offset_left = -584.0
offset_top = -651.0
offset_right = 575.0
offset_bottom = 21.0
color = Color(0.713726, 0, 0.74902, 0.156863)

[node name="RichTextLabel" type="RichTextLabel" parent="void/void2"]
visible = false
z_index = 3
offset_left = -560.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
theme_override_font_sizes/normal_font_size = 18
text = "You are no god... but I shall feast upon your essence regardless!"

[node name="TextTimer" type="Timer" parent="void/void2"]
wait_time = 3.0
one_shot = true

[node name="Players" type="Node" parent="."]

[node name="Player 1" type="CharacterBody2D" parent="Players"]
position = Vector2(-1, -458)
scale = Vector2(0.8, 0.8)
script = ExtResource("3_oqkfy")
metadata/Player = "Player"

[node name="ColorRect" type="ColorRect" parent="Players/Player 1"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 1"]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_q1nq8")
one_way_collision = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 1"]
visible = false
position = Vector2(-1.25, -0.625001)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("5_mol7r")

[node name="Nuke Stuff" type="Node" parent="."]

[node name="Nuke Spawner" type="Node2D" parent="Nuke Stuff"]
script = ExtResource("7_126io")
nuke_scene = ExtResource("8_4pxx2")
sweeper_scene = ExtResource("9_8l2bm")

[node name="Timer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 15.0
autostart = true

[node name="Timer3" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 30.0
autostart = true

[node name="Timer4" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 45.0
autostart = true

[node name="Swimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 18.33
one_shot = true

[node name="SwimerTimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
one_shot = true
autostart = true

[node name="Modifier Stuff" type="Node" parent="."]

[node name="Blackout Timer" type="Node2D" parent="Modifier Stuff"]
script = ExtResource("10_pd8gv")
blackout = ExtResource("11_ri46e")
fog = ExtResource("12_t36db")

[node name="Timer" type="Timer" parent="Modifier Stuff/Blackout Timer"]
wait_time = 10.0
autostart = true

[node name="Grounds" type="Node" parent="."]
script = ExtResource("18_6kwht")
GroundLeft = ExtResource("19_vl0f4")
Ground = ExtResource("20_ueihu")
GroundRight = ExtResource("21_2kree")

[node name="Timers3" type="Node" parent="."]
script = ExtResource("15_cr7po")

[node name="CounterTimer" type="Timer" parent="Timers3"]
autostart = true

[node name="Time2Survive" type="Timer" parent="Timers3"]
wait_time = 30.0
one_shot = true
autostart = true

[node name="RichTextLabel" type="Label" parent="Timers3"]
offset_left = -115.0
offset_top = -618.0
offset_right = 117.0
offset_bottom = -546.0
theme = ExtResource("13_jn3q6")
text = "Time Left: 60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BG" type="Node2D" parent="."]

[node name="GravSwitch" type="Node" parent="."]
script = ExtResource("26_spvpx")

[node name="GravSwitch1" type="Area2D" parent="GravSwitch"]
position = Vector2(192, -324)

[node name="ColorRect" type="ColorRect" parent="GravSwitch/GravSwitch1"]
offset_left = -30.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 30.0
scale = Vector2(3, 1)
color = Color(0, 1, 1, 0.490196)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravSwitch/GravSwitch1"]
position = Vector2(30, 10)
scale = Vector2(3, 1)
shape = SubResource("RectangleShape2D_xm4t3")

[node name="GravSwitch2" type="Area2D" parent="GravSwitch"]
position = Vector2(-192, -324)
scale = Vector2(-1, 1)

[node name="ColorRect" type="ColorRect" parent="GravSwitch/GravSwitch2"]
offset_left = -30.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 30.0
scale = Vector2(3, 1)
color = Color(0, 1, 1, 0.490196)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravSwitch/GravSwitch2"]
position = Vector2(30, 10)
scale = Vector2(3, 1)
shape = SubResource("RectangleShape2D_xm4t3")

[connection signal="area_entered" from="void" to="void" method="_on_area_entered"]
[connection signal="body_entered" from="void" to="void" method="_on_body_entered"]
[connection signal="timeout" from="void/TextTimer" to="void" method="_on_text_timer_timeout"]
[connection signal="area_entered" from="void/void2" to="void/void2" method="_on_area_entered"]
[connection signal="body_entered" from="void/void2" to="void/void2" method="_on_body_entered"]
[connection signal="timeout" from="void/void2/TextTimer" to="void/void2" method="_on_text_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer" to="Nuke Stuff/Nuke Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer2" to="Nuke Stuff/Nuke Spawner" method="_on_timer_2_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer3" to="Nuke Stuff/Nuke Spawner" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer4" to="Nuke Stuff/Nuke Spawner" method="_on_timer_4_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Swimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/SwimerTimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timer_timeout"]
[connection signal="timeout" from="Modifier Stuff/Blackout Timer/Timer" to="Modifier Stuff/Blackout Timer" method="_on_timer_timeout"]
[connection signal="timeout" from="Timers3/CounterTimer" to="Timers3" method="_on_counter_timer_timeout"]
[connection signal="timeout" from="Timers3/Time2Survive" to="Timers3" method="_on_time_2_survive_timeout"]
[connection signal="body_entered" from="GravSwitch/GravSwitch1" to="GravSwitch" method="_on_grav_switch_1_body_entered"]
[connection signal="body_entered" from="GravSwitch/GravSwitch2" to="GravSwitch" method="_on_grav_switch_1_body_entered"]
